#2 summary routes doc
